# todo-vala-example

./: .gitignore  README.md  com.github.undeadspez.vala-todo-example.json  meson.build
data/: com.github.undeadspez.vala-todo-example.appdata.xml.in  com.github.undeadspez.vala-todo-example.desktop.in  com.github.undeadspez.vala-todo-example.gschema.xml  meson.build  styles.css  todo.gresource.xml
data/ui/: form.ui  list-item.ui  list.ui  window.ui
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  todo.gresource.xml  window.ui  window.vala
src/data/: generic_dao.vala  repository.vala  todo_dao.vala  todos-repository.vala  unit-of-work.vala
src/models/: todo.vala
src/ui/: form.ui  form.vala  list-item.ui  list-item.vala  list.ui  list.vala  window.ui
src/widgets/: form.vala  list-item.vala  list.vala
